# ros-repo-5

./: README.md
deli_ai_server/CCTV_human_detector/: CCTV_human_detector.py
deli_ai_server/delibot_obstacle_detector/: package.xml  setup.cfg  setup.py
deli_ai_server/delibot_obstacle_detector/delibot_obstacle_detector/: camera_receiver.py  obstacle_info_extractor.py  udp_yolo_receiver.py  yolov8.py  yolov8_detector.py
deli_ai_server/delibot_perception_manager/: package.xml  setup.cfg  setup.py
deli_ai_server/delibot_perception_manager/commons/: udp_setups.py
deli_ai_server/delibot_perception_manager/delibot_perception_manager/: perception_manager.py
deli_bot/behavior_manager/: package.xml  setup.cfg  setup.py
deli_bot/behavior_manager/behavior_manager/: BehaviorManager.py  GoalListener.py  RobotAdapter.py  TaskServer.py  TrafficClient.py  utils.py
deli_bot/behavior_manager/launch/: launch_manager.launch.py
deli_bot/behavior_trees/: custom_bt.xml  custom_bt2.xml
deli_bot/install/: local_setup.sh  setup.sh
deli_bot/install/pinky_bringup/share/pinky_bringup/: package.sh
deli_bot/install/pinky_cartographer/share/pinky_cartographer/: local_setup.sh  package.sh
deli_bot/install/pinky_description/share/pinky_description/: local_setup.sh  package.sh
deli_bot/install/pinky_emotion/share/pinky_emotion/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
deli_bot/install/pinky_gazebo/share/pinky_gazebo/: local_setup.sh  package.sh
deli_bot/install/pinky_interfaces/share/pinky_interfaces/: local_setup.sh  package.sh
deli_bot/install/pinky_navigation/share/pinky_navigation/: local_setup.sh  package.sh
deli_bot/log/: latest_build
deli_bot/nav2/: nav2_params.yaml
deli_bot/nav_controller/: package.xml  plugins.xml  setup.py
deli_bot/nav_controller/nav_controller/: AlignWithPath.py
deli_bot/nav_interfaces/: CMakeLists.txt  package.xml
deli_bot/nav_interfaces/msg/: ObstacleDetected.msg
deli_bot/nav_interfaces/srv/: ComputeHeadingError.srv
deli_bot/navigation_manager/: package.xml  setup.py
deli_bot/navigation_manager/launch/: launch_manager.launch.py
deli_bot/navigation_manager/navigation_manager/: camera_streamer.py  motion_planner.py  motion_planner_manager.py  navigation_manager.py  perception_manager.py  robot_monitor.py  task_handler.py  utils.py
deli_bot/perception_manager/: package.xml  setup.cfg  setup.py
deli_bot/perception_manager/perception_manager/: camera_obstacle_detector.py  camera_streamer.py  lidar_obstacle_detector.py
deli_bot/pinky_lcd/: display.py
deli_bot/pinky_navigation/: plugins.xml
deli_bot/pinky_navigation/behavior_trees/: custom_bt3.xml
deli_bot/pinky_navigation/params/: nav2_params.yaml  nav2_params:v0.2.0.yaml  nav_params:v0.1.0.yaml  nav_params:v0.1.2.yaml
deli_interfaces/ai_server_msgs/: CMakeLists.txt  package.xml
deli_interfaces/ai_server_msgs/msg/: BoundingBox2D.msg  Detection.msg  DetectionArray.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  Mask.msg  Pose2D.msg
deli_interfaces/navigation_manager_msgs/: CMakeLists.txt  package.xml
deli_interfaces/navigation_manager_msgs/msg/: ObstacleDetected.msg
deli_interfaces/task_manager_msgs/: CMakeLists.txt  package.xml
deli_interfaces/task_manager_msgs/action/: Delivery.action  DispatchDeliveryTask.action
deli_interfaces/task_manager_msgs/msg/: BatteryLevel.msg  Payload.msg  PickUp.msg  Station.msg
deli_interfaces/traffic_manager_msgs/: CMakeLists.txt  package.xml
deli_interfaces/traffic_manager_msgs/action/: SetTargetPose.action
deli_interfaces/traffic_manager_msgs/msg/: StationWaypoint.msg
deli_interfaces/traffic_manager_msgs/srv/: GetPose.srv  GetStationWaypoints.srv
deli_service_server/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
deli_service_server/install/task_manager/share/task_manager/: local_setup.sh  package.dsv  package.ps1  package.sh
deli_service_server/log/: latest_build
deli_service_server/src/task_manager/: CMakeLists.txt
deli_service_server/src/task_manager/action/: ManipulationTask.action
deli_service_server/src/task_manager/msg/: Task.msg
deli_service_server/src/task_manager/task_manager_py/: main.py
deli_service_server/src/task_manager/task_manager_py/adapters/fastapi/: fastapi_server.py
deli_service_server/src/task_manager/task_manager_py/adapters/ros/: mobile_robot_action_client.py  robot_action_client.py  robot_manipulator_server.py  robot_navigation_server.py  station_manipulator_client.py
deli_service_server/src/task_manager/task_manager_py/application/use_cases/: order_service.py
deli_service_server/src/task_manager/task_manager_py/domain/models/: order.py  robot.py
deli_service_server/src/task_manager/task_manager_py/domain/services/: route_planner.py
deli_service_server/src/task_manager/task_manager_py/infrastructure/: db_manager.py
deli_service_server/task_manager/: CMakeLists.txt  domain_bridge.yaml  package.xml
deli_service_server/task_manager/task_manager_py/: main.py
deli_service_server/task_manager/task_manager_py/adapters/fastapi/: fastapi_server.py
deli_service_server/task_manager/task_manager_py/adapters/ros/: mobile_robot_action_client.py  robot_manipulator_server.py  robot_navigation_server.py  station_manipulator_client.py
deli_service_server/task_manager/task_manager_py/application/use_cases/: order_service.py
deli_service_server/task_manager/task_manager_py/domain/models/: order.py  robot.py  station.py
deli_service_server/task_manager/task_manager_py/domain/services/: route_planner.py
deli_service_server/traffic_manager/: package.xml  setup.py
deli_service_server/traffic_manager/config/: waypoints.yaml
deli_service_server/traffic_manager/traffic_manager/: traffic_manager.py  utils.py
deli_simulations/deli_gazebo/: package.xml  setup.cfg  setup.py
deli_simulations/deli_gazebo/launch/: deli_world.launch.py
deli_simulations/deli_gazebo/worlds/: deli_world.world
deli_ui/Admin_UI/: admin.ui  admin_ui.py  admin_ui2.py
deli_ui/User_UI/: login.ui  mainPage.ui  my_menu.ui  user_ui.py
(+125 files in other folders)
