<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>navigation_manager</name>
  <version>0.1.1</version>
  <description>TODO: Package description</description>
  <maintainer email="jonaon611@gmail.com">naon</maintainer>
  <license>Behavior Manager with a traffic client for managing waypoints</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ai_server_msgs</exec_depend>
  <exec_depend>task_manager_msgs</exec_depend>
  <exec_depend>traffic_manager_msgs</exec_depend>
  <exec_depend>navigation_manager_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>