<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>traffic_manager</name>
  <version>0.1.0</version>
  <description>Traffic Manager package</description>
  <maintainer email="jonaon611@gmail.com">naon</maintainer>
  <license>TODO: License declaration</license>

  
  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>traffic_manager_msgs</build_depend>

  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>traffic_manager_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>pyyaml</exec_depend>

  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>